fix: videos do not play on iOS and macOS Safari (#567)
* fix: videos do not play on iOS and macOS Safari

* fix: broken autoplay on non iOS devices

* fix: auto play everywhere, but not via attribute, via js

* fix: update video controls behavior and styling

--- a/templates/web/style.css
+++ b/templates/web/style.css
@@ -194,6 +194,15 @@ ul {
   background-color: rgba(0,0,0,0.0);
 }
 
+video.img-preview::-webkit-media-controls {
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+video.img-preview:hover::-webkit-media-controls {
+  opacity: 1;
+}
+
 .media-action {
   position: absolute;
   top: 50%;
